--- a/export_presets.cfg
+++ b/export_presets.cfg
@@ -5,11 +5,11 @@ platform="Windows Desktop"
 runnable=true
 advanced_options=false
 dedicated_server=false
-custom_features=""
+custom_features="database/data.db"
 export_filter="all_resources"
-include_filter=""
+include_filter="res://database/data.db, *.db"
 exclude_filter=""
-export_path="export/win/ZFA-Lernhilfe-0.0.1.exe"
+export_path="export/win/ZFA-Lernhilfe-0.0.2.exe"
 patches=PackedStringArray()
 encryption_include_filters=""
 encryption_exclude_filters=""
@@ -23,7 +23,7 @@ script_export_mode=2
 custom_template/debug=""
 custom_template/release=""
 debug/export_console_wrapper=0
-binary_format/embed_pck=true
+binary_format/embed_pck=false
 texture_format/s3tc_bptc=true
 texture_format/etc2_astc=false
 binary_format/architecture="x86_64"
@@ -45,7 +45,7 @@ application/file_description=""
 application/copyright=""
 application/trademarks=""
 application/export_angle=0
-application/export_d3d12=0
+application/export_d3d12=1
 application/d3d12_agility_sdk_multiarch=true
 ssh_remote_deploy/enabled=false
 ssh_remote_deploy/host="user@host_ip"
