changed export settings

--- a/export_presets.cfg
+++ b/export_presets.cfg
@@ -9,7 +9,7 @@ custom_features="database/data.db"
 export_filter="all_resources"
 include_filter="res://database/data.db, *.db"
 exclude_filter=""
-export_path="export/win/ZFA-Lernhilfe-0.0.2.exe"
+export_path="export/ZFA-Lernhilfe(latest)/ZFA-Lernhilfe.exe"
 patches=PackedStringArray()
 encryption_include_filters=""
 encryption_exclude_filters=""
